# predictions

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  conftest.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
backend/: app.py  requirements.txt
backend/src/api/: __init__.py  main.py
backend/src/data_ingestion/: __init__.py  airnow_fetcher.py  data_attribution.py  openaq_fetcher.py  pandora_fetcher.py  purpleair_fetcher.py  tempo_fetcher.py  weather_fetcher.py
backend/src/data_processing/: __init__.py
backend/src/database/: __init__.py  models.py
backend/src/ml_models/: __init__.py  feature_engineer.py  forecaster.py  model_loader.py  trainer.py
backend/src/notifications/: __init__.py
backend/src/pipeline/: __init__.py
backend/src/utils/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
notebooks/: EA_data.ipynb
scripts/: init_db.sql  setup.sh  setup_uv.sh
src/: App.jsx
tests/: test_pandora_fetcher.py  test_tempo_fetcher.py  test_tempo_quick.py
